--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,9 @@ wp-config.php
 # Note: If you wish to whitelist themes,
 # uncomment the next line
 #/wp-content/themes
+
+# WP-Optimize
+/wp-content/advanced-cache.php
+/wp-content/cache/wpo-cache/*
+/wp-content/cache/wpo-minify/*
+/wp-content/wpo-cache/*
